tests/errors/type-error-empty.ja
procedure main()
    int x
    int y
    y += empty(x)
